2017-07-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp:
	  Speed up register allocator a little bit.

2017-07-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix an issue similar to bug #2633.
	* src/SDCCralloc.hpp,
	  src/stm8/ralloc2.cc:
	  Speed up register allocator a bit.

2017-07-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix bug #2633.

2017-07-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  support/regression/tests/loop.c:
	  Improve narrowing of loop counters.

2017-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve writing of constants to bit-fields.

2017-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/stm8/gen.c:
	  Better code for operations on 8-bit global variables.

2017-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve code generation for wide read through pointer.

2017-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Implement narrowing of loop counters, RFE #530.
	* src/stm8/gen.c,
	  support/regression/tests/bug-2630.c:
	  Fix bug #2630.

2017-07-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (isInitiallyTrue),
	* src/SDCCerr.c (setWarningDisabledState),
	* src/SDCCerr.h: fix bugs #2552 & #2614
	* src/SDCCast.c (decorateType): fix bug #2550

2017-07-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Improve narrowing of multiplications.

2017-07-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genRet): fix some problems with returning long long
	* src/SDCCicode.c (geniCodeAdd): fix bug #2625
	* support/regression/tests/bug-2625.c: test for bug #2625

2017-07-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Optimze reads from literal pointer.
	* src/SDCCopt.c:
	  Optimize right shift followed by cast.

2017-07-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,