@@ -1,3 +1,10 @@
+2017-07-23 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCralloc.hpp:
+	  Speed up register allocator.
+	* src/stm8/gen.c:
+	  Spped up code generation a little bit.
+
 2017-07-21 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCralloc.hpp:
